--- a/TaxiUsuario/app/src/main/res/values/strings.xml
+++ b/TaxiUsuario/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">TaxiUsuario</string>
+    <string name="sign_in">REGISTRARSE</string>
+    <string name="email">Correo electrónico</string>
+    <string name="password">Contraseña</string>
+    <string name="login">Iniciar sesión</string>
+    <string name="remember_password">¿Olvidaste tu contraseña?</string>
+    <string name="name">Nombre</string>
+    <string name="last_name">Apellidos</string>
+    <string name="phone_number">Número de celular</string>
+    <string name="policies">Políticas de privacidad</string>
 </resources>
