--- a/Usuario/app/src/main/res/values/strings.xml
+++ b/Usuario/app/src/main/res/values/strings.xml
@@ -19,9 +19,9 @@
     <string name="password_error">Favor de ingresar su contraseña</string>
     <string name="min">0 min</string>
     <string name="km">0 km</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_home">Inicio</string>
+    <string name="title_dashboard">Configuración</string>
+    <string name="title_notifications">Notificaciones</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
